--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       <p>
         Hi I'm Muhamad Dani Ramanda. Currently I am Chief Department Technology
         at Darma Bangsa School Bandar Lampung. My experienced in PHP language
-        using Framework Laravel and also learning Golang Language for
-        Microservices Architecture .
+        using Framework Laravel.
       </p>
       <p>We will never know the real answer before we try.</p>
       <ul>
