--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
     <div class="box">
       <img src="img/profile.jpg" alt="" class="box-img" />
       <h1>Muhamad Dani Ramanda</h1>
-      <h5>Web Developer - DevOps</h5>
       <p>
         Hi I'm Muhamad Dani Ramanda. Currently I am Chief Department Technology
-        at Darma Bangsa School Bandar Lampung. My experienced in PHP language
-        using Framework Laravel.
+        at Darma Bangsa School Bandar Lampung. Currently I am a Software engineer and System administrator.
       </p>
       <p>We will never know the real answer before we try.</p>
       <ul>
