--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Muhamad Dani Ramanda</h1>
       <p>
         Hi I'm Muhamad Dani Ramanda. Currently I am Chief Department Technology
-        at Darma Bangsa School Bandar Lampung. Currently I am a Software engineer and System administrator.
+        at Darma Bangsa School Bandar Lampung. Currently I am a Web Developer and System Administrator.
       </p>
       <p>We will never know the real answer before we try.</p>
       <ul>
